--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:c0e490eb-3983-48f9-9e66-4a0d893ece93
+spring.h2.console.settings.web-allow-others=true
